# Training

./: .gitignore  LICENSE  README.md  index.html
Rust/Grpc_client_server/grpc_client/: Cargo.toml  README.md
Rust/Grpc_client_server/grpc_client/proto/: services.proto
Rust/Grpc_client_server/grpc_client/src/: client_grpc.rs
Rust/Grpc_client_server/grpc_client/src/client_side_calling/: employee_calling.rs  master_calling.rs  mod.rs  student_calling.rs
Rust/Myproject/: Cargo.toml  ReadMe.md
Rust/Myproject/json_data/employee_hashmap_json/: jr_dev_employee.json  other_employee.json  soft_dev_employee.json  sr_or_c_employee.json
Rust/Myproject/json_data/employee_json/: other_employee.json  sr_or_c_employee.json
Rust/Myproject/json_data/student_hashmap_json/: StudentData_updated.json
Rust/Myproject/json_data/table_task_hashmap_json/: data.json  hashmap_table_data.json
Rust/Myproject/json_data/task_manager_json/: SkillData
Rust/Myproject/src/: main.rs  two_string.rs
Rust/Myproject/src/Axum_server/: mod.rs
Rust/Myproject/src/Axum_server/Routes/: mod.rs
Rust/Myproject/src/Axum_server/Users/: employee_model.rs  mod.rs  student_model.rs
Rust/Myproject/src/Axum_server/Users/employee/: mod.rs  model.rs  services.rs
Rust/Myproject/src/Axum_server/Users/master/: mod.rs  (+2 more)
Rust/Myproject/src/Axum_server/health_check/: mod.rs
Rust/Myproject/src/Axum_server/middleware/: cors.rs  mod.rs
Rust/Myproject/src/Routing_Crud/: mod.rs
Rust/Myproject/src/Testing/: mod.rs  simple_testing.rs
Rust/Myproject/src/area/: mod.rs
Rust/Myproject/src/common_struct/: mod.rs  table_hashmap_struct_enum.rs
Rust/Myproject/src/employee/: mod.rs
Rust/Myproject/src/employee_hashmap/: mod.rs
Rust/Myproject/src/rust_config/: mod.rs
Rust/Myproject/src/rust_config/config/: config.json  config_dev.json  config_test.json
Rust/Myproject/src/rust_config/resources/: mod.rs
Rust/Myproject/src/student/: mod.rs
Rust/Myproject/src/student_hashmap/: mod.rs
Rust/Myproject/src/table_task/: mod.rs
Rust/Myproject/src/table_task_hashmap/: mod.rs  optional.rs  table_task_functions.rs
Rust/Myproject/src/thread/: mod.rs  person_data_thread.rs  task_manager.rs
Rust/Myproject/src/thread/task_manager_services/: biforcation_level_service.rs  biforcation_services.rs  generate_random_data.rs  mod.rs  task_assigner_hash.rs  update_master_data.rs
Rust/Myproject/src/tikv_test/: mod.rs
Rust/Myproject/src/two_string/: gussing_game.rs  mod.rs  single_string.rs  to_string.rs
Rust/Wasm/wasm-table-project/: Cargo.toml  index.js
Rust/Wasm/wasm-table-project/src/: lib.rs  main.rs
Rust/Wasm/wasm-table-project/src/table_task_hashmap/: mod.rs  table_task_functions.rs
Rust/tikv-crud/: Cargo.toml  Query_builder.rs  README.md
Rust/tikv-crud/json_files/: StudentData.json
Rust/tikv-crud/resources/config/: config.json
Rust/tikv-crud/src/: main.rs
Rust/tikv-crud/src/configration/: mod.rs  settings.rs
Rust/tikv-crud/src/users/student/: mod.rs  model.rs  services.rs
Rust/tikv-crud/src/utils/: db_config.rs  db_elasticsearch.rs  logger.rs  mod.rs  tikv_doc.txt
(+67 files in other folders)
