[package]
name = "Myproject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


serde_json="1.0.111"
serde ={version = "1.0.195", features = ["derive"]}
rand = "0.8.5"
lazy_static = "1.4.0"
chrono = "0.4.33"

axum = {version = "0.6"}
tokio = { version = "1.0", features = ["full"] }
