[package]
name = "Myproject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


serde_json="1.0.111"
serde ={version = "1.0.195", features = ["derive"]}
rand = "0.8.5"
lazy_static = "1.4.0"
chrono = "0.4.33"

axum = {version = "0.6.4"}
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"]}
config = "0.14"
hyper = "0.14.28"
tower-http = { version = "0.3.0", features = ["cors", "trace"] } # added



# tikv-client = "0.3.0"