[package]
name = "tikv-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = "0.6.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json ={ version = "1.0.114"}
tikv-client = "0.3.0"
tokio = { version = "1.36.0", features = ["full"] }
lazy_static = "1.4.0"