[package]
name = "grpc_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# server binary
[[bin]]
    name = "client"
    path = "src/client_grpc.rs"


[dependencies]


tonic = "0.11"
prost = "0.12.3"
tokio = { version = "1.36.0",features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4.0"
serde_json="1.0.111"
serde ={version = "1.0.195", features = ["derive"]}


[build-dependencies]

tonic-build = "0.11"